2003-08-03 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Only give method definitions 0 RVAs if they are
	marked abstract.
	
2003-08-03 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Offsets are not explicit offsets, they are just
	byte offsets from the current position.

2003-07-29 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Allow labels to be created with an explicit offset
	
Fri Jul 25 19:25:31 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* PEAPI.cs: added coded index for the owner field in the GenericParam
	table.

2003-07-20 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Add methods to PEFile to allow fields and methods to
	be added to type specs. This fixing bah-zillions of little
	problems in ilasm. We can now add fields and methods to arrays,
	reference types, and most importantly generics.

	Add the GenericTypeInst class. This is an instance of a generic
	type. ie Hash<int32, string>. GenericTypeSpecs now write their id
	number as a compressed number, this matches the way the runtime
	loads them and will allow generic types to have more then 255 type
	parameters.
	
2003-07-17 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Add GenericTypeSpec so generic members can be
	referenced. Add the ldelem and stelem opcodes (these are part of
	the new spec).
	
2003-07-15 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Allow generic constraints to be added, emit generic
	constraints.
		
2003-07-14 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Cleanup methods for generics, now that constraints and
	params are seperated.
		
2003-05-31 Jackson Harper <jackson@latitudegeo.com>

	* PEAPI.cs: Initial work on implementing custom
	attributes. Attributes can now be added to ClassDefs and
	MethodDefs. Still need to implement for other metadata elements.
	Added the stele.r4 and stelem.r8 instructions, this should also
	shift the stelem.ref instruction to the proper value (0xA2)
		