@@ -1,5 +1,9 @@
 2003-08-03 Jackson Harper <jackson@latitudegeo.com>
 
+	* PEAPI.cs: New Sentinel type.
+	
+2003-08-03 Jackson Harper <jackson@latitudegeo.com>
+
 	* PEAPI.cs: Only give method definitions 0 RVAs if they are
 	marked abstract.
 	
